Limit magnetometer values
Per discussion with J, putting magnetometer values
into spin boxes

Change-Id: Ib5ecd5fe5ee6e6f85f738d17ccb3b680f612dfd2
(cherry picked from commit cfcd28fca1b231f52507ee8595a1af6a4061d872)

--- a/android/skin/qt/extended-pages/virtual-sensors-page.ui
+++ b/android/skin/qt/extended-pages/virtual-sensors-page.ui
@@ -283,83 +283,59 @@
       <rect>
        <x>270</x>
        <y>50</y>
-       <width>220</width>
+       <width>272</width>
        <height>40</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <property name="topMargin">
-       <number>4</number>
+       <number>0</number>
       </property>
       <item>
-       <widget class="QLineEdit" name="magNorthWidget">
-        <property name="font">
-         <font>
-          <family>Roboto</family>
-         </font>
+       <widget class="QDoubleSpinBox" name="magNorthWidget">
+        <property name="minimum">
+         <double>-1000.000000000000000</double>
         </property>
-        <property name="styleSheet">
-         <string notr="true"/>
+        <property name="maximum">
+         <double>1000.000000000000000</double>
         </property>
-        <property name="text">
-         <string>22.0</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        <property name="value">
+         <double>22.000000000000000</double>
         </property>
         <property name="class" stdset="0">
          <string>EditableValue</string>
-        </property>
-        <property name="report_metrics" stdset="0">
-         <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="magEastWidget">
-        <property name="font">
-         <font>
-          <family>Roboto</family>
-         </font>
+       <widget class="QDoubleSpinBox" name="magEastWidget">
+        <property name="minimum">
+         <double>-1000.000000000000000</double>
         </property>
-        <property name="styleSheet">
-         <string notr="true"/>
+        <property name="maximum">
+         <double>1000.000000000000000</double>
         </property>
-        <property name="text">
-         <string>5.9</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        <property name="value">
+         <double>5.900000000000000</double>
         </property>
         <property name="class" stdset="0">
          <string>EditableValue</string>
-        </property>
-        <property name="report_metrics" stdset="0">
-         <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="magVerticalWidget">
-        <property name="font">
-         <font>
-          <family>Roboto</family>
-         </font>
+       <widget class="QDoubleSpinBox" name="magVerticalWidget">
+        <property name="minimum">
+         <double>-1000.000000000000000</double>
         </property>
-        <property name="styleSheet">
-         <string notr="true"/>
+        <property name="maximum">
+         <double>1000.000000000000000</double>
         </property>
-        <property name="text">
-         <string>43.1</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        <property name="value">
+         <double>43.100000000000001</double>
         </property>
         <property name="class" stdset="0">
          <string>EditableValue</string>
-        </property>
-        <property name="report_metrics" stdset="0">
-         <bool>false</bool>
         </property>
        </widget>
       </item>
