--- a/android/skin/qt/resources.qrc
+++ b/android/skin/qt/resources.qrc
@@ -43,6 +43,8 @@
 
         <!-- Used in the "extended" window -->
         <file alias="add">images/light/ic_add_0BA_48dp.svg</file>
+        <file alias="arrow_drop_down">images/light/ic_arrow_drop_down_black_18px.svg</file>
+        <file alias="arrow_drop_up">images/light/ic_arrow_drop_up_black_18px.svg</file>
         <file alias="add_disabled">images/light/ic_add_BEE_48dp.svg</file>
         <file alias="battery">images/light/ic_battery_80_678_48dp.svg</file>
         <file alias="call_end">images/light/ic_call_end_0BA_48dp.svg</file>
@@ -102,6 +104,8 @@
     </qresource>
     <qresource prefix="/dark">
         <!-- Main list of tool buttons -->
+        <file alias="arrow_drop_down">images/dark/ic_arrow_drop_down_white_18px.svg</file>
+        <file alias="arrow_drop_up">images/dark/ic_arrow_drop_up_white_18px.svg</file>
         <file alias="back">images/dark/System_Back_white.svg</file>
         <file alias="close">images/dark/ic_close_48px.svg</file>
         <file alias="help">images/dark/ic_help_677_48dp.svg</file>
